--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-cli": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "minifyify": "^7.1.0",
-    "uglify-js": "^2.6.1"
+    "minifyify": "^7.1.0"
   }
 }
