--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A small library for dealing with errors",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/browserify/bin/cmd.js ./index.js -o ./houston.min.js -t [ babelify --presets [ es2015 ] ] -d -p [minifyify --map houston.min.map --output houston.min.map]"
+    "test": "mocha --compilers js:babel-register",
+    "build": "npm run test && ./node_modules/browserify/bin/cmd.js ./index.js -o ./houston.min.js -t [ babelify --presets [ es2015 ] ] -d -p [minifyify --map houston.min.map --output houston.min.map]"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,10 @@
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
     "babelify": "^7.2.0",
-    "minifyify": "^7.1.0"
+    "chai": "^3.4.1",
+    "minifyify": "^7.1.0",
+    "mocha": "^2.3.4"
   }
 }
